test_cases/syntax-error/syntax-error.cpp
void main()
{
  int 2s = 10;
}